syntax = "proto3";

option csharp_namespace = "Overdrawn";

package overdrawn;

service Balance {
  rpc GetBalance (BalanceRequest) returns (BalanceResponse);
}

message BalanceRequest {
  string clientId = 1;
}

message BalanceResponse {
  float balance = 1;
}
